Don't use 'KProcess::setShellCommand' as that method uses 'KStandardDirs::findExe' which doesn't respect the path preferences given by the user. 'KStandardDirs::findExe' is happy to return the first executable it finds, for example, in '/usr/bin' although the user maybe didn't want to use that directory and he/she had changed the $PATH variable accordingly.

BUG: 204397